# CSCI-502-2026

./: README.md  test.c
Project 1/: project_1_minimu9v5read.c  project_1_proto  project_1_proto.c
project 2/: CMakeLists.txt  Makefile  imu_glut
project 2/src/: CommInterface.h  I2CBus.cpp  I2CBus.h  MadgwickFilter.cpp  MadgwickFilter.h  MinIMU9.cpp  MinIMU9.h  main.cpp
